# catalog-commit-bench

./: .gitignore  Cargo.toml  DOCKER.md  README.md  RESULTS.md  bench-stack.sh  docker-compose.yml  polaris-bootstrap.sh  run-bench.sh
crates/cache-scan/: Cargo.toml
crates/cache-scan/src/: main.rs
crates/commit/: Cargo.toml
crates/commit/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/driver/: Cargo.toml
crates/driver/src/: main.rs
crates/read-write/: Cargo.toml  stock-append-probe.py
crates/read-write/src/: main.rs
crates/rust-vs-jvm/: Cargo.toml  run-spark.sh  spark-query.py
crates/rust-vs-jvm/src/: main.rs
crates/write-data/: Cargo.toml
crates/write-data/src/: main.rs
docker/: bench.Dockerfile  build-lakecat.sh
docker/lakecat/: Dockerfile
src/: main.rs
