[package]
name = "catalog-bench-cache-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cold-vs-warm scan benchmark (Sail + Foyer object-store cache) — SCAFFOLD."

[[bin]]
name = "catalog-bench-cache-scan"
path = "src/main.rs"

[dependencies]
catalog-bench-common = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
