[package]
name = "catalog-bench-commit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Iceberg REST catalog commit-path benchmark (LakeCat, Polaris, Gravitino, Nessie)"

[[bin]]
name = "catalog-bench-commit"
path = "src/main.rs"

[dependencies]
catalog-bench-common = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
