[package]
name = "catalog-bench-read-write"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Full INSERT + filtered-scan workload through LakeCat + Sail — SCAFFOLD."

[[bin]]
name = "catalog-bench-read-write"
path = "src/main.rs"

[dependencies]
catalog-bench-common = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
