[package]
name = "catalog-bench-rust-vs-jvm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sail (Rust) vs Spark/Trino (JVM) scan benchmark — SCAFFOLD."

[[bin]]
name = "catalog-bench-rust-vs-jvm"
path = "src/main.rs"

[dependencies]
catalog-bench-common = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
