[package]
name = "catalog-bench-write-data"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Write-path benchmark: real Parquet data files to S3/MinIO + a LakeCat commit."

[[bin]]
name = "catalog-bench-write-data"
path = "src/main.rs"

[dependencies]
catalog-bench-common = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
object_store = { workspace = true }
